# resume

./: Dockerfile  docker-compose.yaml  main.py  pyproject.toml
static/: index.html
templates/: index.html
