[tool.poetry]
name = "resume"
version = "0.1.0"
description = ""
authors = ["Kirill Frolov <ffrolov.kirill@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.13"
uvicorn = "^0.34.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
